projects/layout/components/cell/cell.styles.less
@import '@taiga-ui/core/styles/taiga-ui-local';

[tuiCell] {
    --t-padding: 0.125rem 1rem;
    --t-radius: var(--tui-radius-s);

    .button-clear();

    position: relative;
    display: flex;
    align-items: center;
    box-sizing: content-box;
    isolation: isolate;
    color: var(--tui-text-primary);
    padding: var(--t-padding);
    min-block-size: var(--t-height);
    border-radius: var(--t-radius);

    &:disabled,
    &[data-state='disabled'] {
        opacity: initial;
        pointer-events: none;

        & > *:not([tuiTooltip]) {
            opacity: var(--tui-disabled-opacity);
        }
    }

    &:has(input:disabled) {
        opacity: initial;
        pointer-events: none;

        & > *:not([tuiTooltip]) {
            opacity: var(--tui-disabled-opacity);
        }
    }

    [tuiAccessories] {
        position: relative;
        display: flex;
        max-block-size: var(--t-height);
        align-items: center;
        align-self: stretch;
    }

    // Specificity artificially increased for disabled state
    [tuiCellActions][tuiCellActions] {
        position: absolute;
        right: 0;
        z-index: 1;
        padding-right: inherit;

        & ~ * {
            .transition(opacity);
        }

        & button,
        & a {
            .transition(opacity);

            opacity: 0;

            &:focus-visible {
                opacity: 1;
            }
        }
    }

    [tuiSubtitle] {
        display: flex;
        align-items: center;
        gap: 0.25rem;
        color: var(--tui-text-secondary);
    }

    [tuiTitle] {
        flex-shrink: 7;
        margin-inline-end: auto;
        align-items: normal;
        text-align: start;
    }

    [tuiTitle] ~ [tuiTitle] {
        flex-shrink: 3;
        margin-inline-end: 0;
        text-align: end;
        align-items: flex-end;

        &[tuiFade] {
            align-items: flex-start;
        }
    }

    tui-badge-notification[data-size='xs'] {
        .center-top();

        left: -0.625rem;
    }

    &[data-size='s'] {
        --t-height: calc(var(--tui-height-s) - 0.125rem);
        --t-padding: 0.1875rem 1rem;

        &[data-height='spacious'] {
            --t-padding: 0.4375rem 1rem;
        }

        &[data-height='compact'] {
            --t-height: calc(var(--tui-height-s) - 0.25rem);
            --t-padding: 0 1rem;
        }

        [tuiTitle] {
            max-block-size: 100%;
            font: var(--tui-font-text-ui-s);
            gap: 0;
        }

        [tuiSubtitle] {
            font: var(--tui-font-text-ui-xs);
        }

        & > *:not(:first-child),
        & > [tuiAccessories] > *:not(:first-child) {
            margin-inline-start: 0.5rem;
        }

        & > tui-avatar,
        & > tui-avatar-stack tui-avatar,
        & > [tuiAccessories] tui-avatar,
        & > [tuiAccessories] tui-avatar-stack tui-avatar {
            --t-size: 1.5rem;

            font: var(--tui-font-text-m);
            font-size: 0.5625rem;
        }
    }

    &[data-size='m'] {
        --t-height: calc(var(--tui-height-m) - 0.75rem);
        --t-padding: 0.375rem 1rem;

        &[data-height='spacious'] {
            --t-padding: 1rem;
        }

        &[data-height='compact'] {
            --t-height: calc(var(--tui-height-m) - 0.5rem);
            --t-padding: 0 1rem;
        }

        [tuiTitle] {
            font: var(--tui-font-text-ui-s);
            gap: 0.125rem;
        }

        [tuiSubtitle] {
            font: var(--tui-font-text-ui-xs);
        }

        & > *:not(:first-child),
        & > [tuiAccessories] > *:not(:first-child) {
            margin-inline-start: 0.5rem;
        }

        & > tui-avatar,
        & > tui-avatar-stack tui-avatar,
        & > [tuiAccessories] tui-avatar,
        & > [tuiAccessories] tui-avatar-stack tui-avatar {
            --t-size: 2rem;

            align-self: flex-start;
        }
    }

    &[data-size='l'] {
        --t-height: calc(var(--tui-height-l) - 1rem);
        --t-padding: 0.5rem 1rem;
        --t-radius: var(--tui-radius-l);

        &[data-height='spacious'] {
            --t-padding: 1.25rem 1rem;
        }

        &[data-height='compact'] {
            --t-height: calc(var(--tui-height-l) - 1rem);
            --t-padding: 0 1rem;
        }

        & > *:not(:first-child),
        & > [tuiAccessories] > *:not(:first-child) {
            margin-inline-start: 1rem;
        }

        & > tui-avatar,
        & > tui-avatar-stack tui-avatar,
        & > [tuiAccessories] tui-avatar,
        & > [tuiAccessories] tui-avatar-stack tui-avatar {
            --t-size: 2.5rem;

            font: var(--tui-font-text-m);
            font-weight: bold;
            align-self: flex-start;
        }
    }

    &:hover [tuiCellActions] ~ * {
        opacity: 0;
    }

    &:hover [tuiCellActions] button,
    &:hover [tuiCellActions] a,
    &:hover [tuiCellActions] label {
        opacity: 1;
    }

    &:focus-visible {
        outline: 0.125rem solid var(--tui-border-focus);
        outline-offset: -0.125rem;
    }

    [tuiOption] &,
    tui-primitive-textfield & {
        padding: 0;
    }
}

@media @tui-mouse {
    a[tuiCell]:not([tuiSurface]):hover,
    button[tuiCell]:not([tuiSurface]):hover,
    label[tuiCell]:not([tuiSurface]):hover {
        &:not(:disabled, [data-state='disabled']) {
            background: var(--tui-background-neutral-1);
            cursor: pointer;
        }
    }

    label[tuiCell]:not([tuiSurface]):hover {
        &:not(:has(input:disabled)) {
            background: var(--tui-background-neutral-1);
            cursor: pointer;
        }
    }
}

